# advent2024

./: .gitignore  CMakeLists.txt  README.md
01/: CMakeLists.txt  main.cpp  main2.cpp
02/: CMakeLists.txt  main.cpp  main2.cpp
common/include/: io.h
common/include/common/: file.h  parse.h  table.h
common/src/: file.cpp  io.cpp  parse.cpp
day01/: CMakeLists.txt  main.cpp
day02/: CMakeLists.txt  main.cpp
day03/: CMakeLists.txt  main.cpp
day04/: CMakeLists.txt  main.cpp
day05/: CMakeLists.txt  main.cpp
day06/: CMakeLists.txt  main.cpp
day07/: CMakeLists.txt  main.cpp
day08/: CMakeLists.txt  main.cpp
day09/: CMakeLists.txt  main.cpp
day10/: CMakeLists.txt  main.cpp
day11/: CMakeLists.txt  main.cpp
day12/: CMakeLists.txt  main.cpp
day13/: CMakeLists.txt  main.cpp
day14/: CMakeLists.txt  main.cpp
day15/: CMakeLists.txt  main.cpp
day16/: CMakeLists.txt  main.cpp
day17/: CMakeLists.txt  main.cpp
day18/: CMakeLists.txt  main.cpp
day19/: CMakeLists.txt  main.cpp
day20/: CMakeLists.txt  main.cpp
day21/: CMakeLists.txt  main.cpp
day22/: CMakeLists.txt  main.cpp
day23/: CMakeLists.txt  main.cpp
day24/: CMakeLists.txt  input.txt  main.cpp
day25/: CMakeLists.txt  main.cpp
template/: CMakeLists.txt  main.cpp
